// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scale > basic functionality > should return properly with #808080 and undefined 1`] = `
{
  "100": "#ededed",
  "200": "#dedede",
  "300": "#cbcbcb",
  "400": "#b6b6b6",
  "50": "#f5f5f5",
  "500": "#9e9e9e",
  "600": "#848484",
  "700": "#686868",
  "800": "#4d4d4d",
  "900": "#313131",
  "950": "#161616",
}
`;

exports[`scale > basic functionality > should return properly with #d4ffc7 and { variant: 'vibrant' } 1`] = `
{
  "100": "#c9ffb9",
  "200": "#bbf0aa",
  "300": "#a8dd98",
  "400": "#93c783",
  "50": "#d1ffc1",
  "500": "#7bae6c",
  "600": "#629352",
  "700": "#477737",
  "800": "#2b5a1a",
  "900": "#0c3c00",
  "950": "#001f00",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { format: 'oklch' } 1`] = `
{
  "100": "oklch(94.565% 0.25404 19.90218)",
  "200": "oklch(90.113% 0.25404 19.90218)",
  "300": "oklch(84.348% 0.25404 19.90218)",
  "400": "oklch(77.52% 0.25404 19.90218)",
  "50": "oklch(97% 0.25404 19.90218)",
  "500": "oklch(69.776% 0.25404 19.90218)",
  "600": "oklch(61.214% 0.25404 19.90218)",
  "700": "oklch(51.904% 0.25404 19.90218)",
  "800": "oklch(41.903% 0.25404 19.90218)",
  "900": "oklch(31.256% 0.25404 19.90218)",
  "950": "oklch(20% 0.25404 19.90218)",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { maxLightness: 0.9 } 1`] = `
{
  "100": "#ff7e8f",
  "200": "#ff7082",
  "300": "#ff5b72",
  "400": "#ff415f",
  "50": "#ff8696",
  "500": "#ff194a",
  "600": "#e90032",
  "700": "#c90017",
  "800": "#a70000",
  "900": "#830000",
  "950": "#5d0000",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { minLightness: 0.1 } 1`] = `
{
  "100": "#ff96a3",
  "200": "#ff8493",
  "300": "#ff6c7f",
  "400": "#ff4d67",
  "50": "#ffa0ac",
  "500": "#ff214d",
  "600": "#e60030",
  "700": "#be000b",
  "800": "#940000",
  "900": "#670000",
  "950": "#370000",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and undefined 1`] = `
{
  "100": "#ff97a4",
  "200": "#ff8796",
  "300": "#ff7284",
  "400": "#ff586f",
  "50": "#ffa0ac",
  "500": "#ff3558",
  "600": "#f7003e",
  "700": "#d40021",
  "800": "#af0000",
  "900": "#870000",
  "950": "#5d0000",
}
`;

exports[`scale > basic functionality > should return properly with hsl(136 100% 50%) and { variant: 'deep' } 1`] = `
{
  "100": "hsl(124.22 100% 74.9%)",
  "200": "hsl(124.17 100% 71.76%)",
  "300": "hsl(124.8 82.42% 64.31%)",
  "400": "hsl(126.92 66.67% 54.12%)",
  "50": "hsl(124.03 100% 76.67%)",
  "500": "hsl(134.52 95.88% 38.04%)",
  "600": "hsl(120 100% 31.96%)",
  "700": "hsl(120 100% 26.08%)",
  "800": "hsl(120 100% 20%)",
  "900": "hsl(120 100% 13.92%)",
  "950": "hsl(120 100% 7.45%)",
}
`;

exports[`scale > basic functionality > should return properly with hsl(136 100% 50%) and undefined 1`] = `
{
  "100": "hsl(128.85 100% 64.12%)",
  "200": "hsl(131.04 100% 58.43%)",
  "300": "hsl(133.66 100% 48.24%)",
  "400": "hsl(122.15 100% 43.73%)",
  "50": "hsl(128.42 100% 66.47%)",
  "500": "hsl(120 100% 38.63%)",
  "600": "hsl(120 100% 32.94%)",
  "700": "hsl(120 100% 27.06%)",
  "800": "hsl(120 100% 20.98%)",
  "900": "hsl(120 100% 14.51%)",
  "950": "hsl(120 100% 7.84%)",
}
`;

exports[`scale > basic functionality > should return properly with lightblue and undefined 1`] = `
{
  "100": "#caf6ff",
  "200": "#bbe7f5",
  "300": "#a9d4e2",
  "400": "#94becc",
  "50": "#d2feff",
  "500": "#7ca5b3",
  "600": "#628b98",
  "700": "#48707c",
  "800": "#2c535f",
  "900": "#0d3742",
  "950": "#001b25",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and { lightnessCurve: 1.2 } 1`] = `
{
  "100": "oklab(92.142% 0.1374 0.14283)",
  "200": "oklab(85.838% 0.1374 0.14283)",
  "300": "oklab(78.843% 0.1374 0.14283)",
  "400": "oklab(71.357% 0.1374 0.14283)",
  "50": "oklab(97% 0.1374 0.14283)",
  "500": "oklab(63.484% 0.1374 0.14283)",
  "600": "oklab(55.287% 0.1374 0.14283)",
  "700": "oklab(46.811% 0.1374 0.14283)",
  "800": "oklab(38.089% 0.1374 0.14283)",
  "900": "oklab(29.145% 0.1374 0.14283)",
  "950": "oklab(20% 0.1374 0.14283)",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and { variant: 'neutral' } 1`] = `
{
  "100": "oklab(94.565% 0.0687 0.07142)",
  "200": "oklab(90.113% 0.0687 0.07142)",
  "300": "oklab(84.348% 0.0687 0.07142)",
  "400": "oklab(77.52% 0.0687 0.07142)",
  "50": "oklab(97% 0.0687 0.07142)",
  "500": "oklab(69.776% 0.0687 0.07142)",
  "600": "oklab(61.214% 0.0687 0.07142)",
  "700": "oklab(51.904% 0.0687 0.07142)",
  "800": "oklab(41.903% 0.0687 0.07142)",
  "900": "oklab(31.256% 0.0687 0.07142)",
  "950": "oklab(20% 0.0687 0.07142)",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and undefined 1`] = `
{
  "100": "oklab(94.565% 0.1374 0.14283)",
  "200": "oklab(90.113% 0.1374 0.14283)",
  "300": "oklab(84.348% 0.1374 0.14283)",
  "400": "oklab(77.52% 0.1374 0.14283)",
  "50": "oklab(97% 0.1374 0.14283)",
  "500": "oklab(69.776% 0.1374 0.14283)",
  "600": "oklab(61.214% 0.1374 0.14283)",
  "700": "oklab(51.904% 0.1374 0.14283)",
  "800": "oklab(41.903% 0.1374 0.14283)",
  "900": "oklab(31.256% 0.1374 0.14283)",
  "950": "oklab(20% 0.1374 0.14283)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(0.65 0.3 27.34) and undefined 1`] = `
{
  "100": "oklch(94.565% 0.3 27.34)",
  "200": "oklch(90.113% 0.3 27.34)",
  "300": "oklch(84.348% 0.3 27.34)",
  "400": "oklch(77.52% 0.3 27.34)",
  "50": "oklch(97% 0.3 27.34)",
  "500": "oklch(69.776% 0.3 27.34)",
  "600": "oklch(61.214% 0.3 27.34)",
  "700": "oklch(51.904% 0.3 27.34)",
  "800": "oklch(41.903% 0.3 27.34)",
  "900": "oklch(31.256% 0.3 27.34)",
  "950": "oklch(20% 0.3 27.34)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(47.642% 0.29956 274.93693) and { variant: 'pastel' } 1`] = `
{
  "100": "oklch(94.565% 0.08987 274.93693)",
  "200": "oklch(90.113% 0.08987 274.93693)",
  "300": "oklch(84.348% 0.08987 274.93693)",
  "400": "oklch(77.52% 0.08987 274.93693)",
  "50": "oklch(97% 0.08987 274.93693)",
  "500": "oklch(69.776% 0.08987 274.93693)",
  "600": "oklch(61.214% 0.08987 274.93693)",
  "700": "oklch(51.904% 0.08987 274.93693)",
  "800": "oklch(41.903% 0.08987 274.93693)",
  "900": "oklch(31.256% 0.08987 274.93693)",
  "950": "oklch(20% 0.08987 274.93693)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(47.642% 0.29956 274.93693) and undefined 1`] = `
{
  "100": "oklch(94.565% 0.29956 274.93693)",
  "200": "oklch(90.113% 0.29956 274.93693)",
  "300": "oklch(84.348% 0.29956 274.93693)",
  "400": "oklch(77.52% 0.29956 274.93693)",
  "50": "oklch(97% 0.29956 274.93693)",
  "500": "oklch(69.776% 0.29956 274.93693)",
  "600": "oklch(61.214% 0.29956 274.93693)",
  "700": "oklch(51.904% 0.29956 274.93693)",
  "800": "oklch(41.903% 0.29956 274.93693)",
  "900": "oklch(31.256% 0.29956 274.93693)",
  "950": "oklch(20% 0.29956 274.93693)",
}
`;

exports[`scale > basic functionality > should return properly with rgb(255 230 109) and { variant: 'subtle' } 1`] = `
{
  "100": "rgb(242 238 216)",
  "200": "rgb(227 223 202)",
  "300": "rgb(208 204 183)",
  "400": "rgb(186 182 162)",
  "50": "rgb(250 246 224)",
  "500": "rgb(162 158 138)",
  "600": "rgb(136 132 113)",
  "700": "rgb(109 105 86)",
  "800": "rgb(81 77 59)",
  "900": "rgb(53 49 32)",
  "950": "rgb(25 22 6)",
}
`;

exports[`scale > basic functionality > should return properly with rgb(255 230 109) and undefined 1`] = `
{
  "100": "rgb(255 238 117)",
  "200": "rgb(248 223 102)",
  "300": "rgb(229 204 81)",
  "400": "rgb(207 182 54)",
  "50": "rgb(255 246 125)",
  "500": "rgb(182 157 8)",
  "600": "rgb(155 131 0)",
  "700": "rgb(127 103 0)",
  "800": "rgb(99 74 0)",
  "900": "rgb(69 45 0)",
  "950": "rgb(40 15 0)",
}
`;

exports[`scale > chromaCurve option > should apply parabolic curve with chromaCurve: 1 (legacy) 1`] = `
{
  "100": "oklch(94.565% 0.06158 274.93693)",
  "200": "oklch(90.113% 0.10676 274.93693)",
  "300": "oklch(84.348% 0.1582 274.93693)",
  "400": "oklch(77.52% 0.20881 274.93693)",
  "50": "oklch(97% 0.03487 274.93693)",
  "500": "oklch(69.776% 0.2527 274.93693)",
  "600": "oklch(61.214% 0.28449 274.93693)",
  "700": "oklch(51.904% 0.29913 274.93693)",
  "800": "oklch(41.903% 0.2917 274.93693)",
  "900": "oklch(31.256% 0.25746 274.93693)",
  "950": "oklch(20% 0.19172 274.93693)",
}
`;

exports[`scale > chromaCurve option > should interpolate with chromaCurve: 0.5 1`] = `
{
  "100": "oklch(94.565% 0.18057 274.93693)",
  "200": "oklch(90.113% 0.20316 274.93693)",
  "300": "oklch(84.348% 0.22888 274.93693)",
  "400": "oklch(77.52% 0.25418 274.93693)",
  "50": "oklch(97% 0.16721 274.93693)",
  "500": "oklch(69.776% 0.27613 274.93693)",
  "600": "oklch(61.214% 0.29203 274.93693)",
  "700": "oklch(51.904% 0.29934 274.93693)",
  "800": "oklch(41.903% 0.29563 274.93693)",
  "900": "oklch(31.256% 0.27851 274.93693)",
  "950": "oklch(20% 0.24564 274.93693)",
}
`;

exports[`scale > chromaCurve option > should maintain constant chroma with chromaCurve: 0 (default) 1`] = `
{
  "100": "oklch(94.565% 0.29956 274.93693)",
  "200": "oklch(90.113% 0.29956 274.93693)",
  "300": "oklch(84.348% 0.29956 274.93693)",
  "400": "oklch(77.52% 0.29956 274.93693)",
  "50": "oklch(97% 0.29956 274.93693)",
  "500": "oklch(69.776% 0.29956 274.93693)",
  "600": "oklch(61.214% 0.29956 274.93693)",
  "700": "oklch(51.904% 0.29956 274.93693)",
  "800": "oklch(41.903% 0.29956 274.93693)",
  "900": "oklch(31.256% 0.29956 274.93693)",
  "950": "oklch(20% 0.29956 274.93693)",
}
`;

exports[`scale > lock option > should apply "chromaCurve" to locked position 1`] = `"#234e2f"`;

exports[`scale > lock option > should apply "saturation" to locked position 1`] = `"#38483b"`;

exports[`scale > lock option > should ignore invalid lock value and warn 1`] = `
{
  "100": "#b9cfff",
  "200": "#acbfff",
  "300": "#9babff",
  "400": "#8892ff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#5f55ff",
  "700": "#4c29ff",
  "800": "#3b00ea",
  "900": "#3100c4",
  "950": "#2c009c",
}
`;

exports[`scale > lock option > should lock at first key (50) 1`] = `
{
  "100": "oklch(59.28% 0.21891 292.71711)",
  "200": "oklch(56.935% 0.21891 292.71711)",
  "300": "oklch(53.898% 0.21891 292.71711)",
  "400": "oklch(50.301% 0.21891 292.71711)",
  "50": "oklch(60.563% 0.21891 292.71711)",
  "500": "oklch(46.222% 0.21891 292.71711)",
  "600": "oklch(41.711% 0.21891 292.71711)",
  "700": "oklch(36.807% 0.21891 292.71711)",
  "800": "oklch(31.538% 0.21891 292.71711)",
  "900": "oklch(25.93% 0.21891 292.71711)",
  "950": "oklch(20% 0.21891 292.71711)",
}
`;

exports[`scale > lock option > should lock at last key (950) 1`] = `
{
  "100": "oklch(95.848% 0.21891 292.71711)",
  "200": "oklch(93.741% 0.21891 292.71711)",
  "300": "oklch(91.013% 0.21891 292.71711)",
  "400": "oklch(87.782% 0.21891 292.71711)",
  "50": "oklch(97% 0.21891 292.71711)",
  "500": "oklch(84.118% 0.21891 292.71711)",
  "600": "oklch(80.066% 0.21891 292.71711)",
  "700": "oklch(75.66% 0.21891 292.71711)",
  "800": "oklch(70.928% 0.21891 292.71711)",
  "900": "oklch(65.89% 0.21891 292.71711)",
  "950": "oklch(60.563% 0.21891 292.71711)",
}
`;

exports[`scale > lock option > should lock input color at step 500 1`] = `
{
  "100": "oklch(93.741% 0.21891 292.71711)",
  "200": "oklch(87.782% 0.21891 292.71711)",
  "300": "oklch(80.066% 0.21891 292.71711)",
  "400": "oklch(70.928% 0.21891 292.71711)",
  "50": "oklch(97% 0.21891 292.71711)",
  "500": "oklch(60.563% 0.21891 292.71711)",
  "600": "oklch(56.935% 0.21891 292.71711)",
  "700": "oklch(50.301% 0.21891 292.71711)",
  "800": "oklch(41.711% 0.21891 292.71711)",
  "900": "oklch(31.538% 0.21891 292.71711)",
  "950": "oklch(20% 0.21891 292.71711)",
}
`;

exports[`scale > lock option > should work with different step counts 1`] = `
{
  "100": "oklch(97% 0.29956 274.93693)",
  "300": "oklch(79.549% 0.29956 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "700": "oklch(37.869% 0.29956 274.93693)",
  "900": "oklch(20% 0.29956 274.93693)",
}
`;

exports[`scale > mode option > should generate dark mode with inverted lightness 1`] = `
{
  "100": "#2d00a4",
  "200": "#2e00b4",
  "300": "#3200c9",
  "400": "#3800e1",
  "50": "#2c009c",
  "500": "#4300fd",
  "600": "#533eff",
  "700": "#6864ff",
  "800": "#8289ff",
  "900": "#9fb0ff",
  "950": "#c0d8ff",
}
`;

exports[`scale > mode option > should generate light mode by default 1`] = `
{
  "100": "#b9cfff",
  "200": "#acbfff",
  "300": "#9babff",
  "400": "#8892ff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#5f55ff",
  "700": "#4c29ff",
  "800": "#3b00ea",
  "900": "#3100c4",
  "950": "#2c009c",
}
`;

exports[`scale > option interactions > should work with lock + mode: dark 1`] = `
{
  "100": "oklch(22.472% 0.29956 274.93693)",
  "200": "oklch(26.993% 0.29956 274.93693)",
  "300": "oklch(32.847% 0.29956 274.93693)",
  "400": "oklch(39.779% 0.29956 274.93693)",
  "50": "oklch(20% 0.29956 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "600": "oklch(52.057% 0.29956 274.93693)",
  "700": "oklch(60.129% 0.29956 274.93693)",
  "800": "oklch(70.582% 0.29956 274.93693)",
  "900": "oklch(82.96% 0.29956 274.93693)",
  "950": "oklch(97% 0.29956 274.93693)",
}
`;

exports[`scale > option interactions > should work with lock + steps 1`] = `
{
  "100": "oklch(97% 0.29956 274.93693)",
  "300": "oklch(79.549% 0.29956 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "700": "oklch(37.869% 0.29956 274.93693)",
  "900": "oklch(20% 0.29956 274.93693)",
}
`;

exports[`scale > saturation option > should generate grayscale with saturation: 0 1`] = `
{
  "100": "oklch(94.565% 0 274.93693)",
  "200": "oklch(90.113% 0 274.93693)",
  "300": "oklch(84.348% 0 274.93693)",
  "400": "oklch(77.52% 0 274.93693)",
  "50": "oklch(97% 0 274.93693)",
  "500": "oklch(69.776% 0 274.93693)",
  "600": "oklch(61.214% 0 274.93693)",
  "700": "oklch(51.904% 0 274.93693)",
  "800": "oklch(41.903% 0 274.93693)",
  "900": "oklch(31.256% 0 274.93693)",
  "950": "oklch(20% 0 274.93693)",
}
`;

exports[`scale > saturation option > should use max chroma with saturation: 100 1`] = `
{
  "100": "oklch(94.565% 0.30223 274.93693)",
  "200": "oklch(90.113% 0.30223 274.93693)",
  "300": "oklch(84.348% 0.30223 274.93693)",
  "400": "oklch(77.52% 0.30223 274.93693)",
  "50": "oklch(97% 0.30223 274.93693)",
  "500": "oklch(69.776% 0.30223 274.93693)",
  "600": "oklch(61.214% 0.30223 274.93693)",
  "700": "oklch(51.904% 0.30223 274.93693)",
  "800": "oklch(41.903% 0.30223 274.93693)",
  "900": "oklch(31.256% 0.30223 274.93693)",
  "950": "oklch(20% 0.30223 274.93693)",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 3 1`] = `
{
  "100": "#c0d8ff",
  "500": "#7476ff",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 4 1`] = `
{
  "100": "#c0d8ff",
  "400": "#95a3ff",
  "600": "#523aff",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 5 1`] = `
{
  "100": "#c0d8ff",
  "300": "#a4b5ff",
  "500": "#7476ff",
  "700": "#4300fd",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 6 1`] = `
{
  "100": "#c0d8ff",
  "200": "#acbfff",
  "400": "#8892ff",
  "600": "#5f55ff",
  "800": "#3b00ea",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 7 1`] = `
{
  "100": "#c0d8ff",
  "200": "#b1c5ff",
  "400": "#95a3ff",
  "500": "#7476ff",
  "600": "#523aff",
  "800": "#3700dd",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 8 1`] = `
{
  "100": "#c0d8ff",
  "200": "#b4c9ff",
  "300": "#9eaeff",
  "500": "#828bff",
  "600": "#655fff",
  "700": "#4920ff",
  "800": "#3400d4",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 9 1`] = `
{
  "100": "#c0d8ff",
  "200": "#b6ccff",
  "300": "#a4b5ff",
  "400": "#8d99ff",
  "500": "#7476ff",
  "600": "#5a4cff",
  "700": "#4300fd",
  "800": "#3300cd",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 10 1`] = `
{
  "100": "#b8ceff",
  "200": "#a8bbff",
  "300": "#95a3ff",
  "400": "#7f86ff",
  "50": "#c0d8ff",
  "500": "#6864ff",
  "600": "#523aff",
  "700": "#3f00f2",
  "800": "#3200c8",
  "900": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 11 1`] = `
{
  "100": "#b9cfff",
  "200": "#acbfff",
  "300": "#9babff",
  "400": "#8892ff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#5f55ff",
  "700": "#4c29ff",
  "800": "#3b00ea",
  "900": "#3100c4",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 12 1`] = `
{
  "100": "#bad0ff",
  "150": "#afc2ff",
  "200": "#a0b1ff",
  "300": "#8f9cff",
  "400": "#7d83ff",
  "50": "#c0d8ff",
  "500": "#6a68ff",
  "600": "#5847ff",
  "700": "#4716ff",
  "800": "#3900e3",
  "900": "#3000c0",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 13 1`] = `
{
  "100": "#bbd1ff",
  "150": "#b1c5ff",
  "200": "#a4b5ff",
  "300": "#95a3ff",
  "400": "#858eff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#635bff",
  "700": "#523aff",
  "800": "#4300fd",
  "850": "#3700dd",
  "900": "#3000bd",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 14 1`] = `
{
  "100": "#bbd2ff",
  "150": "#b2c7ff",
  "200": "#a7b9ff",
  "250": "#9aa9ff",
  "300": "#8b96ff",
  "400": "#7c81ff",
  "50": "#c0d8ff",
  "500": "#6c6aff",
  "600": "#5c4fff",
  "700": "#4d2eff",
  "800": "#4000f6",
  "850": "#3600d9",
  "900": "#2f00bb",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 15 1`] = `
{
  "100": "#bcd2ff",
  "150": "#b4c9ff",
  "200": "#aabcff",
  "250": "#9eaeff",
  "300": "#909dff",
  "400": "#828bff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#655fff",
  "700": "#5745ff",
  "750": "#4920ff",
  "800": "#3d00ef",
  "850": "#3400d4",
  "900": "#2f00b8",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 16 1`] = `
{
  "100": "#bcd3ff",
  "150": "#b5caff",
  "200": "#acbfff",
  "250": "#a1b2ff",
  "300": "#95a3ff",
  "350": "#8892ff",
  "400": "#7b80ff",
  "50": "#c0d8ff",
  "500": "#6d6cff",
  "600": "#5f55ff",
  "700": "#523aff",
  "750": "#460fff",
  "800": "#3b00ea",
  "850": "#3400d1",
  "900": "#2f00b7",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 17 1`] = `
{
  "100": "#bdd3ff",
  "150": "#b6ccff",
  "200": "#aec1ff",
  "250": "#a4b5ff",
  "300": "#99a8ff",
  "350": "#8d99ff",
  "400": "#8188ff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "600": "#6762ff",
  "650": "#5a4cff",
  "700": "#4e30ff",
  "750": "#4300fd",
  "800": "#3a00e5",
  "850": "#3300cd",
  "900": "#2e00b5",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 18 1`] = `
{
  "100": "#bdd4ff",
  "150": "#b7cdff",
  "200": "#afc3ff",
  "250": "#a6b8ff",
  "300": "#9cacff",
  "350": "#919eff",
  "400": "#868fff",
  "450": "#7a7fff",
  "50": "#c0d8ff",
  "500": "#6e6dff",
  "600": "#6259ff",
  "650": "#5643ff",
  "700": "#4b26ff",
  "750": "#4100f7",
  "800": "#3800e1",
  "850": "#3200cb",
  "900": "#2e00b3",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 19 1`] = `
{
  "100": "#bdd4ff",
  "150": "#b8ceff",
  "200": "#b1c5ff",
  "250": "#a8bbff",
  "300": "#9fb0ff",
  "350": "#95a3ff",
  "400": "#8a95ff",
  "450": "#7f86ff",
  "50": "#c0d8ff",
  "500": "#7476ff",
  "550": "#6864ff",
  "600": "#5d51ff",
  "650": "#523aff",
  "700": "#481aff",
  "750": "#3f00f2",
  "800": "#3700dd",
  "850": "#3200c8",
  "900": "#2e00b2",
  "950": "#2c009c",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 20 1`] = `
{
  "100": "#bed4ff",
  "1000": "#2c009c",
  "150": "#b8ceff",
  "200": "#b2c6ff",
  "250": "#aabdff",
  "300": "#a2b3ff",
  "350": "#98a7ff",
  "400": "#8e9aff",
  "450": "#848dff",
  "50": "#c0d8ff",
  "500": "#797eff",
  "550": "#6e6eff",
  "600": "#635dff",
  "650": "#5949ff",
  "700": "#4f32ff",
  "750": "#450aff",
  "800": "#3d00ee",
  "850": "#3600da",
  "900": "#3100c6",
  "950": "#2e00b1",
}
`;
